moved featureselection to hsfs and cleaned up some intermediate stuff

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <encoding>UTF-8</encoding>
 
         <!-- Scala -->
-        <scala.major.version>${scala-212.major.version}</scala.major.version>
+        <scala.major.version>${scala-211.major.version}</scala.major.version>
         <scala.version>${scala.major.version}.10</scala.version>
         <scala-211.major.version>2.11</scala-211.major.version>
         <scala-212.major.version>2.12</scala-212.major.version>
@@ -68,7 +68,7 @@
         <scala-maven-plugin.version>4.4.0</scala-maven-plugin.version>
 
         <!-- Spark -->
-        <spark.version>${spark-31.version}</spark.version>
+        <spark.version>${spark-24.version}</spark.version>
         <spark-22.version>2.2.2</spark-22.version>
         <spark-23.version>2.3.2</spark-23.version>
         <spark-24.version>2.4.2</spark-24.version>
@@ -103,12 +103,6 @@
             <groupId>org.scalanlp</groupId>
             <artifactId>breeze_${scala.major.version}</artifactId>
             <version>0.13.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.datasketches</groupId>
-            <artifactId>datasketches-java</artifactId>
-            <version>2.0.0</version>
         </dependency>
 
         <dependency>
@@ -152,6 +146,14 @@
             <version>1.23</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.datasketches</groupId>
+            <artifactId>datasketches-java</artifactId>
+            <version>1.3.0-incubating</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
@@ -223,7 +225,7 @@
                 <version>1.0.0</version>
                 <configuration>
                     <verbose>false</verbose>
-                    <failOnViolation>false</failOnViolation>
+                    <failOnViolation>true</failOnViolation>
                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
                     <failOnWarning>false</failOnWarning>
                     <sourceDirectory>${project.basedir}/src/main/scala</sourceDirectory>
